@@ -14,8 +14,6 @@
     <orderEntry type="module" module-name="jminor-common-db" />
     <orderEntry type="module" module-name="jminor-common-server" />
     <orderEntry type="module" module-name="jminor-framework-db-core" />
-    <orderEntry type="module" module-name="jminor-framework-db-local" scope="TEST" />
-    <orderEntry type="module" module-name="jminor-framework-server" scope="TEST" />
     <orderEntry type="module-library">
       <library>
         <CLASSES>
