@@ -4,25 +4,13 @@
 package org.jminor.framework.db.remote;
 
 import org.jminor.common.User;
-import org.jminor.common.Version;
-import org.jminor.common.db.Database;
-import org.jminor.common.db.Databases;
-import org.jminor.common.i18n.Messages;
-import org.jminor.common.server.Server;
 import org.jminor.framework.db.EntityConnection;
 import org.jminor.framework.db.EntityConnectionProvider;
 import org.jminor.framework.db.EntityConnectionProviders;
-import org.jminor.framework.server.DefaultEntityConnectionServer;
-import org.jminor.framework.server.EntityConnectionServerAdmin;
 
-import org.junit.AfterClass;
-import org.junit.BeforeClass;
 import org.junit.Test;
 
-import java.rmi.registry.LocateRegistry;
-import java.util.UUID;
-
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
 
 /**
  * User: Bjorn Darri
@@ -35,64 +23,6 @@ public class RemoteEntityConnectionProviderTest {
           System.getProperty("jminor.unittest.username", "scott"),
           System.getProperty("jminor.unittest.password", "tiger"));
 
-  private static final User ADMIN_USER = new User("scott", "tiger");
-  private static Server server;
-  private static EntityConnectionServerAdmin admin;
-
-  @BeforeClass
-  public static synchronized void setUp() throws Exception {
-    configure();
-    final Database database = Databases.getInstance();
-    final String serverName = Server.SERVER_NAME_PREFIX.get() + " " + Version.getVersionString()
-            + "@" + (database.getSid() != null ? database.getSid().toUpperCase() : database.getHost().toUpperCase());
-    DefaultEntityConnectionServer.startServer();
-    server = (Server) LocateRegistry.getRegistry(Server.SERVER_HOST_NAME.get(), Server.REGISTRY_PORT.get()).lookup(serverName);
-    admin = (EntityConnectionServerAdmin) server.getServerAdmin(ADMIN_USER);
-  }
-
-  @AfterClass
-  public static synchronized void tearDown() throws Exception {
-    admin.shutdown();
-    server = null;
-  }
-
-  @Test
-  public void test() throws Exception {
-    final RemoteEntityConnectionProvider provider = new RemoteEntityConnectionProvider("localhost",
-            UNIT_TEST_USER, UUID.randomUUID(), "TestClient");
-
-    assertEquals(EntityConnection.Type.REMOTE, provider.getConnectionType());
-    assertEquals(EntityConnection.Type.REMOTE, provider.getConnection().getType());
-
-    assertEquals(Server.SERVER_HOST_NAME.get(), provider.getServerHostName());
-
-    final EntityConnection db = provider.getConnection();
-    assertNotNull(db);
-    assertTrue(db.isConnected());
-    provider.disconnect();
-
-    final EntityConnection db2 = provider.getConnection();
-    assertNotNull(db2);
-    assertFalse(db == db2);
-    assertTrue(db2.isConnected());
-    provider.disconnect();
-
-    EntityConnection db3 = provider.getConnection();
-    assertTrue(db3.isConnected());
-    admin.disconnect(provider.getClientID());
-    assertFalse(db3.isConnected());
-
-    db3 = provider.getConnection();
-    assertTrue(db3.isConnected());
-    db3.disconnect();
-
-    provider.disconnect();
-    assertEquals("localhost" + " - " + Messages.get(Messages.NOT_CONNECTED), provider.getDescription());
-    db3 = provider.getConnection();
-    assertEquals(admin.getServerInfo().getServerName() + "@localhost", provider.getDescription());
-    db3.disconnect();
-  }
-
   @Test
   public void entityConnectionProviders() {
     final String previousValue = EntityConnectionProvider.CLIENT_CONNECTION_TYPE.get();
@@ -101,17 +31,5 @@ public class RemoteEntityConnectionProviderTest {
     assertEquals("RemoteEntityConnectionProvider", connectionProvider.getClass().getSimpleName());
     assertEquals(EntityConnection.Type.REMOTE, connectionProvider.getConnectionType());
     EntityConnectionProvider.CLIENT_CONNECTION_TYPE.set(previousValue);
-  }
-
-  private static void configure() {
-    Server.REGISTRY_PORT.set(2221);
-    Server.SERVER_PORT.set(2223);
-    Server.SERVER_HOST_NAME.set("localhost");
-    Server.SERVER_ADMIN_PORT.set(2223);
-    Server.SERVER_ADMIN_USER.set("scott:tiger");
-    DefaultEntityConnectionServer.SERVER_CONNECTION_POOLING_INITIAL.set(UNIT_TEST_USER.getUsername() + ":" + UNIT_TEST_USER.getPassword());
-    DefaultEntityConnectionServer.SERVER_DOMAIN_MODEL_CLASSES.set("java.lang.Object");
-    Server.SERVER_CONNECTION_SSL_ENABLED.set(false);
-    Server.RMI_SERVER_HOSTNAME.set("localhost");
   }
 }
