@@ -23,6 +23,7 @@
 
     <dependency org="org.jminor" name="jminor-framework-db-core" rev="${version}"/>
     <dependency org="org.jminor" name="jminor-framework-db-local" rev="${version}"/>
+    <dependency org="org.jminor" name="jminor-framework-db-remote" rev="${version}"/>
 
     <dependency org="org.slf4j" name="slf4j-api" rev="${slf4j-api.version}"/>
 
