@@ -15,6 +15,7 @@
     <orderEntry type="module" module-name="jminor-common-server" />
     <orderEntry type="module" module-name="jminor-framework-db-core" />
     <orderEntry type="module" module-name="jminor-framework-db-local" />
+    <orderEntry type="module" module-name="jminor-framework-db-remote" />
     <orderEntry type="module-library">
       <library>
         <CLASSES>
