@@ -10,9 +10,9 @@ import org.jminor.common.db.reports.ReportException;
 import org.jminor.common.db.reports.ReportResult;
 import org.jminor.common.db.reports.ReportWrapper;
 import org.jminor.common.server.RemoteClient;
-import org.jminor.framework.db.RemoteEntityConnection;
 import org.jminor.framework.db.condition.EntityCondition;
 import org.jminor.framework.db.condition.EntitySelectCondition;
+import org.jminor.framework.db.remote.RemoteEntityConnection;
 import org.jminor.framework.domain.Entity;
 
 import java.rmi.RemoteException;
