@@ -21,6 +21,7 @@
     <dependency org="org.jminor" name="jminor-common-server" rev="${version}"/>
 
     <dependency org="org.jminor" name="jminor-framework-db-core" rev="${version}"/>
+    <dependency org="org.jminor" name="jminor-framework-db-remote" rev="${version}"/>
     <dependency org="org.jminor" name="jminor-plugin-json" rev="${version}"/>
 
     <dependency org="org.json" name="json" rev="${json.version}"/>
@@ -40,7 +41,6 @@
     <dependency org="commons-logging" name="commons-logging" rev="1.1.1" conf="test->master"/>
 
     <dependency org="org.jminor" name="jminor-framework-db-local" rev="${version}" conf="test->master"/>
-    <dependency org="org.jminor" name="jminor-framework-model-unittests" rev="${version}" conf="test->master"/>
     <dependency org="org.jminor" name="jminor-framework-server" rev="${version}" conf="test->default"/>
     <dependency org="com.h2database" name="h2" rev="${h2.version}" conf="test->master"/>
     <dependency org="junit" name="junit" rev="${junit.version}" conf="test->master"/>
