@@ -13,6 +13,8 @@
     <orderEntry type="module" module-name="jminor-common-core" />
     <orderEntry type="module" module-name="jminor-common-server" />
     <orderEntry type="module" module-name="jminor-framework-db-core" />
+    <orderEntry type="module" module-name="jminor-framework-db-remote" />
+    <orderEntry type="module" module-name="jminor-framework-db-local" scope="TEST" />
     <orderEntry type="module" module-name="jminor-framework-server" scope="TEST" />
     <orderEntry type="module" module-name="plugin-json" />
     <orderEntry type="module-library">
