@@ -12,8 +12,8 @@ import org.jminor.common.db.exception.DatabaseException;
 import org.jminor.common.server.Clients;
 import org.jminor.common.server.Server;
 import org.jminor.common.server.ServerException;
-import org.jminor.framework.db.RemoteEntityConnection;
 import org.jminor.framework.db.condition.EntityConditions;
+import org.jminor.framework.db.remote.RemoteEntityConnection;
 import org.jminor.framework.domain.Entities;
 import org.jminor.framework.domain.Entity;
 import org.jminor.framework.domain.EntityUtil;
